# src/main/java/com/zju/section/dto/ApplicationHistoryDetailResponse.java
@@ -1,0 +1,14 @@
+package com.zju.section.dto;
+
+import lombok.Data;
+
+@Data
+public class ApplicationHistoryDetailResponse {
+    private Integer secId;
+    private String reason;
+    private Integer teacherId;
+    private String suggestion;
+    private Boolean finalDecision;
+    private String courseTitle;
+    private String classroomLocation;
+}
