# src/main/java/com/zju/section/entity/Application.java
@@ -14,17 +14,16 @@ public class Application {
     @Id
     @Column(name = "sec_id")
     private Integer secId;
-    
-    @Column(name = "reason", nullable = false, length = 256)
+      @Column(name = "reason", nullable = false, length = 256)
     private String reason;
     
-    @Column(name = "teacher", nullable = false, length = 256)
-    private String teacher;
+    @Column(name = "teacher_id", nullable = false)
+    private Integer teacherId;
     
     @Column(name = "suggestion", length = 256)
     private String suggestion;
     
-    @Column(name = "final", nullable = false)
+    @Column(name = "final")
     private Boolean finalDecision;
     
     @OneToOne
